# deep_past_challenge_3rd_place

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_pipeline.sh
.github/workflows/: deploy-brain.yml
blog/: arc-follow-up-draft.md  arc-follow-up-edit-notes.md
brain/: SCHEMA.md  index.md  log.md
brain/concepts/: brain-publishing.md  codebase-overview.md  dataset-and-config-map.md  evaluation-and-decoding.md  extraction-and-preparation-pipeline.md  normalization.md  prompt-system.md  reproducibility-caveats.md  synthetic-data-generation.md  training-stack.md
brain/entities/: missing-283-transliterations.md
brain/queries/: how-does-this-repo-reproduce-the-solution.md  index.md  what-makes-the-data-pipeline-distinctive.md  what-should-i-show-in-a-demo.md
code/: train_baseline.py  train_reward.py
code/baseline/: dpc_dataset.py  dpc_loader.py  dpc_model.py  dpc_optim.py
code/reward_model/: dpc_reward_dataset.py  dpc_reward_loader.py  dpc_reward_model.py  dpc_reward_optim.py
code/utils/: generation_utils.py  metric_utils.py  monitoring.py  onomasticon.py  train_utils.py
prompts/: akt_ocr_turkish_align_v24.txt  akt_side_by_side_kouwenberg_parsing_v24.txt  akt_side_by_side_parsing_v24.txt  akt_top_bottom_and_align_parsing_v24.txt  akt_top_bottom_turkish_align_v24.txt  cad_side_by_side_parsing.txt  dergipark_inline_parsing_v24.txt  hecker_translit_parsing_v24.txt  michel_en_parsing_v24.txt  prompt_repair_translations_a.txt  prompt_v08_sentence_split.txt  prompt_v13_published_texts_sentence_split.txt
scripts/: normalization.py
sdg/: fill_engine.py  generate_cad_drills.py  grammar_transform.py  seed.py  template_constraints.py  template_pools.py
(+31 files in other folders)
