[project]
name = "deep-past-challenge-3rd-place"
version = "0.1.0"
description = "3rd Place Solution — Deep Past Initiative Machine Translation (Darragh Hanley & Raja Biswas)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "transformers==4.57.3",
    "datasets==4.4.2",
    "peft==0.18.0",
    "accelerate==1.12.0",
    "trl==0.26.2",
    "jupyter",
    "ipykernel",
    "matplotlib>=3.10.8",
    "kagglehub>=0.3.13",
    "scikit-learn>=1.8.0",
    "pyarrow>=22.0.0",
    "parallel-web>=0.3.4",
    "sacrebleu>=2.5.1",
    "omegaconf>=2.3.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "wandb>=0.23.1",
    "hydra-core>=1.3.2",
    "gradio>=6.3.0",
    "bitsandbytes==0.49.1",
    "sentencepiece>=0.2.1",
    "einops>=0.8.1",
    "seaborn>=0.13.2",
    "sentence-transformers==5.0.0",
    "tavily-python>=0.7.19",
    "playwright>=1.57.0",
    "openai-agents>=0.7.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu129", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 256

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
]
